# tc_ble_mesh

./: .gitlab-ci.yml  README.md  gitlab-ci.yml  license_list.txt  license_list_gen.txt  mismatch_license_file.txt  mismatch_license_file_gen.txt  no_license_list.txt  no_license_list_gen.txt
app/android/: readme.md  readme.txt
app/android/TelinkBleMesh/: DevelopmentGuide.md  DevelopmentGuide_cn.md  README.md
app/android/TelinkSigMesh/TelinkSigMeshDebug/MeshStaticLib/: CMakeLists.txt  build.gradle
app/android/TelinkSigMesh/TelinkSigMeshDebug/MeshStaticLib/src/main/: AndroidManifest.xml
app/android/TelinkSigMesh/TelinkSigMeshDebug/MeshStaticLib/src/main/res/values/: strings.xml
app/android/TelinkSigMesh/TelinkSigMeshDebug/TelinkSigMeshLib/: CMakeLists.txt  build.gradle
app/android/TelinkSigMesh/TelinkSigMeshDebug/TelinkSigMeshLib/src/main/cpp/: mesh_lib.c  mesh_lib.h
app/android/TelinkSigMesh/TelinkSigMeshDebug/TelinkSigMeshLib/src/main/cpp/sig_mesh_src_code/ble_lt_mesh/proj/common/: tstring.c  tutility.h
app/android/TelinkSigMesh/TelinkSigMeshDebug/TelinkSigMeshLib/src/main/cpp/sig_mesh_src_code/ble_lt_mesh/proj/drivers/: rf_pa.c  rf_pa.h
app/android/TelinkSigMesh/TelinkSigMeshDebug/TelinkSigMeshLib/src/main/cpp/sig_mesh_src_code/ble_lt_mesh/proj/mcu_spec/: cstartup_8263.S  cstartup_8266.S  cstartup_8267_ram.S  cstartup_8269.S  cstartup_8269_ram.S
app/android/TelinkSigMesh/TelinkSigMeshDebug/TelinkSigMeshLib/src/main/cpp/sig_mesh_src_code/ble_lt_mesh/proj_lib/ble/: blt_config.h
app/android/TelinkSigMesh/TelinkSigMeshDebug/TelinkSigMeshLib/src/main/cpp/sig_mesh_src_code/ble_lt_mesh/proj_lib/mesh_crypto/: aes_att.c  aes_cbc.c  aes_cbc.h  le_crypto.c  mesh_crypto.c  mesh_crypto.h  mesh_md5.c  sha256_telink.c
app/android/TelinkSigMesh/TelinkSigMeshDebug/TelinkSigMeshLib/src/main/cpp/sig_mesh_src_code/ble_lt_mesh/proj_lib/sig_mesh/: Test_case.c  Test_case.h  app_mesh.c  app_mesh.h
app/android/TelinkSigMesh/TelinkSigMeshDebug/TelinkSigMeshLib/src/main/cpp/sig_mesh_src_code/reference/tl_bulk/lib_file/: gatt_provision.c  gatt_provision.h  host_fifo.c  hw_fun.c
app/android/TelinkSigMesh/TelinkSigMeshDebug/TelinkSigMeshLib/src/main/java/com/telink/sig/mesh/ble/: Device.java
app/android/TelinkSigMesh/TelinkSigMeshDebug/TelinkSigMeshLib/src/main/java/com/telink/sig/mesh/event/: EventBus.java  ScanEvent.java
app/android/TelinkSigMesh/TelinkSigMeshDebug/TelinkSigMeshLib/src/main/java/com/telink/sig/mesh/light/: CtlStatusNotificationParser.java  GroupInfoNotificationParser.java  LeBluetooth.java  Opcode_bak.java  RemoteScanReportParser.java  SchedulerNotificationParser.java
app/android/TelinkSigMesh/TelinkSigMeshDebug/TelinkSigMeshLib/src/main/java/com/telink/sig/mesh/light/parser/: FirmwareUpdateStatusParser.java  OnlineStatusInfoParser.java
app/android/TelinkSigMesh/TelinkSigMeshDebug/TelinkSigMeshLib/src/main/java/com/telink/sig/mesh/model/: DeviceBindState.java  OtaDeviceInfo.java
app/android/TelinkSigMesh/TelinkSigMeshDebug/TelinkSigMeshLib/src/main/java/com/telink/sig/mesh/model/storage/: MeshOTAModelStorage.java
app/android/TelinkSigMesh/TelinkSigMeshDebug/TelinkSigMeshLib/src/main/java/com/telink/sig/mesh/util/: FlashOperation.java
app/android/TelinkSigMeshDemo/: build.gradle
app/android/TelinkSigMeshLib/: build.gradle
app/ios/: README.md
app/ios/TelinkSigMeshLib/: LICENSE  README.md  README_CN.md  README_EN.md
app/ios/doc/: ReleaseNotes_Of_iOSDemoApp_For_TelinkSigMesh.docx  SIG Mesh iOS APP(OC版本)使用以及开发手册.docx
app/ios/document/: ReleaseNotes_Of_iOSDemoApp_For_SigMeshOC.docx  ReleaseNotes_Of_iOSDemoApp_For_TelinkSigMesh.docx  ReleaseNotes_Of_iOSDemoApp_For_TelinkSigMeshLib.docx  SIG Mesh iOS APP(OC版本)使用以及开发手册.docx  SIG_MESH_INI格式补充说明_20190529.docx  TelinkSigMeshLib开放源代码版本SDK使用以及开发手册.docx  release_note.md  添加天猫设备为staticOOB模式示范代码.docx
doc/: AN-23031700_Telink SIG Mesh Android and iOS APP User Guide.txt  AN_2211xxxx_C1_腾讯连连_telink开发文档_20221125.docx  SIGMeshFlashmap_20230328.xlsx  SIGMeshFlashmap_20240829.xlsx  SIG_MESH_ReleaseNotes.docx  SIG_MESH_ReleaseNotes_3.1.docx  SigmeshZigbeeFlashmapNormal.xlsx  tc_ble_mesh_Release_Note.md  telink_sig_mesh_sdk_Release_Note.md  ~$G_MESH_ReleaseNotes.docx  ~$G_MESH_ReleaseNotes_3.1.docx
doc/history/: SIG_MESH_ReleaseNotes_before_V3.2.2.docx
draft_features/: readme.txt
draft_features/app/android/: readme.txt
draft_features/app/ios/: README.md
draft_features/firmware/: app_privacy_beacon.c  directed_forwarding.c  mesh_ota.c  readme_draft_feature.txt  remote_prov.c  remote_prov_cli.c  subnet_bridge.c
draft_features/firmware/certify_base/: asn_telink.c  certify_base_crypto.c  pem_der.c  sha1_telink.c
draft_features/sig_mesh_doc/app/: Development Guide for iOS APP SigMesh.rar
draft_features/v3.2.1/firmware/: directed_forwarding.c  mesh_ota.c  readme_draft_feature.txt  remote_prov.c
firmware/: .project  boot-data-mv-fwd.link  boot.link  boot.link.bak  config.h  div_mod.S  drivers.h  genBLELib1.0.py  getver.sh.bak  release_bin_file.sh.bak  release_mesh.sh.bak  release_test_file.sh  release_test_file.sh.bak  sdk_version.txt  sync_to_b91_single_mesh.sh  tl_check_fw.sh  tl_common.h
firmware/boot/8258/: cstartup_8258.S  cstartup_8258_RET_16K.S  (+1 more)
firmware/homekit_src/: homekit_def.h
firmware/proj/: tl_common.h
firmware/proj_lib/: pm.h  pm_8267.h
patches/: patch_note.md
patches/patch_flash_driver_and_low_voltage_detection/: Readme.docx
patches/patch_zbit_flash_driver_and_low_voltage_detection/: Readme.docx
telink_b85m_sig_mesh_sdk_V3.3.2_Patch/: patch_note.md
telink_b85m_sig_mesh_sdk_V3.3.3.6_Patch/: patch_note.md
telink_b85m_sig_mesh_sdk_V3.3.3_Patch/: patch_note.md
telink_b85m_sig_mesh_sdk_V4.1.0.0_Patch/: patch_note.md
telink_sig_mesh_sdk_v3.3.3.5_Patch/: Patch_List.txt
tools/: oob_database.txt  sig_mesh_master.ini  tl_node_gateway.ini
tools/bash-certifybase/: gen-device.bash  gen-device.config  gen-intermediate.bash  gen-intermediate.config  gen-root.bash
vc_debug_tool/: vc_tools_draft_debug_note.txt
vc_debug_tool/ble_lt_mesh/: drivers.h  tl_common.h
(+3276 files in other folders)
